Fixed projects section not being justifed center on mobile

--- a/portfolio/src/app/components/ProjectsSection.module.css
+++ b/portfolio/src/app/components/ProjectsSection.module.css
@@ -29,4 +29,7 @@
 .textarea {
     max-width: 28rem;
     margin-bottom: 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
